[package]
name = "sthe"
version = "0.1.0"
authors = ["easonzero"]
edition = "2021"
description = "A library to provide an easy way to extract data from HTML."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
cffi = ["toml", "serde_json"]

[dependencies]
anyhow = "1"
regex = "1.6.0"
scraper = "0.13.0"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.5.9", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
toml = "0.5.9"
reqwest = "0.11"
tokio = { version = "1.15", features = ["full"] }
clap = { version = "4", features = ["derive"] }
